# ChangeLog for app-i18n/nkf
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.59 2014/08/07 10:05:36 jer Exp $

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> nkf-2.1.3.ebuild:
  Stable for HPPA (bug #518292).

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> nkf-2.1.3.ebuild,
  +files/nkf-2.1.3-strip.patch:
  Do not inject CFLAGS. Unconditionally patch. Convert sed script to patch.

*nkf-2.1.3 (01 Dec 2013)

  01 Dec 2013; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.1.3.ebuild:
  Version bumped.

*nkf-2.1.2-r2 (10 Sep 2013)

  10 Sep 2013; Ian Delaney <idella4@gentoo.org> +nkf-2.1.2-r2.ebuild:
  revbump -> EAPI 5, distutils-r1

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org> -nkf-2.1.0-r1.ebuild,
  -nkf-2.1.2.ebuild:
  remove old ebuilds

  24 May 2013; Alexis Ballier <aballier@gentoo.org> nkf-2.1.2-r1.ebuild:
  keyword ~amd64-fbsd thanks to Yuta SATOH, bug #432410

  07 Dec 2012; Ulrich Müller <ulm@gentoo.org> nkf-2.0.7.ebuild,
  nkf-2.1.0-r1.ebuild, nkf-2.1.2.ebuild, nkf-2.1.2-r1.ebuild:
  Fix LICENSE, bug 444492.

*nkf-2.1.2-r1 (15 Mar 2012)

  15 Mar 2012; Naohiro Aota <naota@gentoo.org> +nkf-2.1.2-r1.ebuild:
  Change nkf-python upstream address. Update LICENSE. Bug #405235

*nkf-2.1.2 (20 Nov 2011)

  20 Nov 2011; Naohiro Aota <naota@gentoo.org> +nkf-2.1.2.ebuild:
  Version bumped. #389231

  11 Oct 2011; Naohiro Aota <naota@gentoo.org> nkf-2.1.0-r1.ebuild:
  Add ~x86-fbsd

  06 Jun 2011; MATSUU Takuto <matsuu@gentoo.org> -nkf-2.0.7-r1.ebuild,
  -nkf-2.1.0.ebuild, nkf-2.1.0-r1.ebuild:
  Fixed USE="-python" issue, bug #311215. Removed old revisions.

*nkf-2.1.0-r1 (31 May 2011)

  30 May 2011; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.1.0-r1.ebuild:
  Fixed python handling, bug #311215.

  23 Apr 2011; Fabian Groffen <grobian@gentoo.org> nkf-2.1.0.ebuild:
  Marked ~x86-macos, bug #360273

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>