@@ -2,21 +2,17 @@
 Hash: SHA256
 
 AUX nkf-2.1.3-strip.patch 328 SHA256 b6b35874a1aa5785a58693ef27e8e8096b9dd6a5513e58b865dc8f517cbab303 SHA512 a23bf0164bcf765f3b846a564c55bd783362e6f84b6f582d4d84b5ec8b711ca07d23d104ef5de2e84de5d6754b064034736ecadc5ceab6bda9ad59f00f2f527d WHIRLPOOL 153749a8531cfe8488a067e1173a86a9a0385cf64933684197740cf95202989830d637d74db4940dddbda2a5c7807d082491c2b203ac08750625cc9851ab4d35
-DIST NKF_python.tgz 2242 SHA256 4dcf34edbd5baf5aabd9e0cd439ca342a99b92c6748311ab693e9277d40d552b SHA512 483a17b35bacbf98b4e96afb801ee048a398266d0547e6ee91686fe6900c5c5eddf4521a6c613c3e0a993d8035b25113a310415e9cbcca3a99093de3d1226e20 WHIRLPOOL b28ca62949c076b9c1de75dd6d97b0d974acd05e086c532a50e460f490618b980adbbd98dc68049d709d6e1c0ddf20070cbde1a6352d9230f3cdb76a24496698
 DIST NKF_python20090602.tgz 2318 SHA256 c86336e52398d836d6db4f9f169d11b4003ac02681b5e3395cd64c7823beb504 SHA512 3baee969daaba43e7ddee0d3b6d3d73ed67cfb0a3c3cbdabcdcda9fa1e61ccf374cd686ee096d031c3c48541c6be6daacf82e3b05885de63b88344d137c306d9 WHIRLPOOL adea94cd33b4421754be16f64f70dd56a3cd7394852f16fb74bde812ef7c30c6d67285f0b832cdba941039755fb57f97592b94f127a020cdcbd064a4d0f67b58
-DIST nkf-2.1.2.tar.gz 158127 SHA256 034e8b676160fa7cfaf023ad130ce2d7a7309e917c8f41b308e9dc2f6218a0a6 SHA512 209d5e300ccbd346021e6e11f2754dafdeb3fdef744a5cfa02d5649c344bec93044e467b4b63f003ab02c7d9969d7230c6076befad9571857d895eecf7698e80 WHIRLPOOL 0654eba7deaa82b3bc563dc7ba15955e256944b6b82e99587918f9e225f958383927c5b751ccafe8f3967353050abe68cf340768deca6dcae36e4a5684e40a86
 DIST nkf-2.1.3.tar.gz 195020 SHA256 8cb430ae69a1ad58b522eb4927b337b5b420bbaeb69df255919019dc64b72fc2 SHA512 e40798d4084657b545bdaa9904229b0a424a9be076c16993b97d206c3e82490c45288eaab417c6eea70b770f89530f90e98e1a659f8f7e4b928eea4396d1e738 WHIRLPOOL 360ab7047da404159d8c9ce736f5d389934bbe33e3feae488be8df7aa87c48c2c39fba9e6a60a5fbd7850311303f906d3c544a48fdfb6163bf1ae106f0aaf639
-DIST nkf207.tar.gz 150501 SHA256 71d2ba992df209a00bb1dca45e3336729dc16e51b71526bd20f897cc6127a275 SHA512 d87553d18542b2958799e42247c029782f96bafce1c0d8969f879d44326081aacaab7411f672034bbed56382fe56ceb4aac27ec0a6f3b1908ad363ee566ae3dd WHIRLPOOL 408a8f65daa79407f8fa7ca03f4057684f0925e55132efdf62bedf5b5b11e0363dcf392de833ee0f9d6e79b4caaffb5bb58f4b85e18f21c27dfad5c0e67c77f5
-EBUILD nkf-2.0.7.ebuild 1449 SHA256 b4a155c1682dc46a87638ed12f7d146e0806de1c119f8702f23abab0bcabecbd SHA512 e21b24680ed88d41ad5e9abd1b771a1333341fcf9a209f4da392bd3b3934976138c56a5f7b070b3a3e016878d963b77fef36175a8145075ead017b2dabef7a17 WHIRLPOOL d8aaf48e960b6c6db05c5f886b1f5dceb10e75f67b2839989df8aab253a73d6954000ad3f753a464186a48484f46e3fb18d26e47925f9b6f03eaff81e477cb6c
-EBUILD nkf-2.1.2-r1.ebuild 1756 SHA256 35688b223dfc44882eec4436fa352d907b3d100503eda24a32e7f83f17333ee8 SHA512 2a06910d1b24fcad7fd97c3cd28f3c0bfb166659f388d3947995fad40201b9ef8aeab721841517b07334fbc2c7c2f7e286bff2a47649f07714c3b5def909986a WHIRLPOOL fd5c03690d63bf159f3dfb469d25121552d98eebc01b3b6235b750c54e802854527a74f160f85f2b28b6029bc50589dd1c8763c0b19563bca8f6089e725ea091
-EBUILD nkf-2.1.2-r2.ebuild 1563 SHA256 d8f9daaa57d80de9f89c709fb2c577517802098e08c7baa548f320f54645cbdd SHA512 e0b76b1121008a2c20ed45c0a42ecfac76437a3760c96968522fd60c60c3a0c02979c70e94894ad4c929b738891888d04eaa174f9209996041a8d820b197c464 WHIRLPOOL 3572260bc9b1f961e4c2c914e58f35b77f6806dd320910f16cbb6e882217eae7f8f8775e57d58bf1be661d556ad137fbf2cc6695dcf765e489d6544eadd15601
-EBUILD nkf-2.1.3.ebuild 1517 SHA256 327e1993cbfc1b713e088ead4f386ad3a6bd829b8009ac121ee56bfd98206543 SHA512 19b5c29773269d62c75d3927c4c0c0a20c8ae66d877f16effa0ae6466aecc22e52aa83c76c9b64be9247a7b0da37308d28b4b531c2b09535f896c4d359840f2c WHIRLPOOL f0c9ae08025771b94bf3e425fa4323595be30fb45ea64c311b5926a2a01712e242f9fd05bc320073d344522fa984a2278e4f7a276767aaccc5eb83cfedc366df
-MISC ChangeLog 7025 SHA256 7048edbe35ebf3ffe25741690e7cd223134eb2d75fa71d12423f6c7bd8c82a26 SHA512 c08b1efe22a069bf3691aba2ad68b225d6500971ec7966bac8d7124593f214b34abb9ff1501a153a427e78d48016d16cfe74c6728bc013aae9aaaa240161badb WHIRLPOOL 498a452ec299a01837696055a0c292c8ff63bf4da43ec1c902a37611baaf16665f87dd5c19c8f049a53a12208ee39b96b2521f9276bc5c5e2172e11ea1d74c9c
+EBUILD nkf-2.1.3.ebuild 1514 SHA256 5da9036acdd8767bd99f26fa304615abc94bfcc00318a7a69de1f86dd99acfbf SHA512 a31c979bd80b91ceb1364531f7289740997b2c3977a36364e771b2b5ae04f9f1fd5c6139f83232aee41cd0a829f57846a31c4ce35f81a7b36aec0c4cae06ce43 WHIRLPOOL 9baf29944826685c325eed42485a563c6a80014e1d5f1ac615635a6665650a46e5c8603b26059302a8cbe3c399fde03365915ca18d9d4c2a351c2119e48bc656
+MISC ChangeLog 7196 SHA256 c70fe3678d3331baec0b5ecf128dfd8b0d72265e0128c2460885674b672e7316 SHA512 7b7ea78ad5f7e55d38e39c96656a4df750e14cc74a2f04387de4502a5ef33f23d55addf743932141b11f59d9a63f0338ebf3609097e7ad0f32f6dea332080e31 WHIRLPOOL 6b7f2245e848525005312df74ba92759afe3ac57e1e97d200e1c005c33e744616b03fc045b60df757c0cb02cbd418de5a7b8bff2ae0c40d5b3ecf1f4d4896951
 MISC metadata.xml 156 SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215 SHA512 e46682afa9f674a8685beb29de6485f750484180d86f8980a3c5c220861f38495ac6f4ceda7cf21c317c640d0d218af3ea9bc1a406b207124c1ffb4bcc99628b WHIRLPOOL 347b826ae650374a01eb144ef127dea2fb96c8646b9a1e4b142bce523822988c4597bc2980cc29dcbfeabc1e44ba70136ddea73f1837d4c6ef7d5e3e9d1d1268
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPjT3EACgkQVWmRsqeSphN8hQCeMf+Qv0Hmy0CoIP1dNe5k9kE5
-c8QAn2wwbO8ihEA+G9jGiF2E0GeW6urD
-=wvNL
+iJwEAQEIAAYFAlPjxbsACgkQG9wOWsQutdaqkAQA1E7hwEy31lBk7fQ0Vwpv6tS4
+LwDp6XwFTUc1WqH5Ss3Kf0FcHbmKnPZGQAQVboNOShXtQEFD/9uHRgqDcv9qjFeD
+Y/bYIhhBrga4E8f8+HMbK3DF2A3YwF1+SDsHjYVkTYs+kN6ior2+jpmrLLD9k9Vj
+UWXPnjFuc7E7wkXTT+g=
+=Bgn7
 -----END PGP SIGNATURE-----
