@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/nkf
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.59 2014/08/07 10:05:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.60 2014/08/07 18:25:08 zlogene Exp $
+
+  07 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> -nkf-2.0.7.ebuild,
+  -nkf-2.1.2-r1.ebuild, -nkf-2.1.2-r2.ebuild, nkf-2.1.3.ebuild:
+  Stable for all wrt bug #518292
 
   07 Aug 2014; Jeroen Roovers <jer@gentoo.org> nkf-2.1.3.ebuild:
   Stable for HPPA (bug #518292).
